# montygate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  biome.json  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-site.yml  release.yml
bindings/napi/: Cargo.toml
bindings/napi/src/: executor.rs  lib.rs  types.rs
crates/montygate-cli/: Cargo.toml
crates/montygate-cli/src/: config.rs  main.rs
crates/montygate-cli/src/commands/: config.rs  mod.rs  run.rs  server.rs
crates/montygate-cli/tests/: integration.rs
crates/montygate-cli/tests/common/: mod.rs
crates/montygate-core/: Cargo.toml
crates/montygate-core/src/: bridge.rs  convert.rs  engine.rs  lib.rs  observability.rs  policy.rs  registry.rs  retry.rs  scheduler.rs  types.rs
crates/montygate-core/tests/: integration.rs
crates/montygate-mcp/: Cargo.toml
crates/montygate-mcp/src/: client_pool.rs  lib.rs  mcp_server.rs  server.rs
docs/: python-support.md
examples/anthropic/: index.ts
examples/basic/: index.ts
examples/openai/: index.ts
examples/vercel-ai/: index.ts
site/: astro.config.mjs  package.json
site/.astro/: settings.json
site/src/components/: ConversationFlow.astro  MetricsRow.astro
site/src/lib/: benchmark.ts
site/src/pages/: index.astro
site/src/styles/: global.css
