[workspace]
members = [
    "crates/montygate-core",
    "crates/montygate-mcp",
    "crates/montygate-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MontyGate Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/puemos/montygate"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# MCP Protocol (official Rust SDK)
rmcp = { version = "0.15", features = ["server", "client", "macros", "transport-child-process", "transport-io", "schemars"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Configuration
toml = "0.8"
config = "0.15"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.16"
mockall = "0.13"
wiremock = "0.6"

# Utilities
regex = "1.11"
uuid = { version = "1.13", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
once_cell = "1.20"
parking_lot = "0.12"

# Rate limiting
governor = "0.8"

# Python execution engine (sandboxed interpreter)
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.4" }

# HTTP client (for SSE transport)
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-client = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true