[workspace]
members = [
    "crates/montygate-core",
    "bindings/napi",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Montygate Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/puemos/montygate"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.16"
mockall = "0.13"

# Utilities
regex = "1.11"
uuid = { version = "1.13", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
once_cell = "1.20"
parking_lot = "0.12"

# Rate limiting
governor = "0.8"

# Python execution engine (sandboxed interpreter)
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
