[package]
name = "montygate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Montygate - framework-agnostic tool execution engine"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
governor.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

# Execution engine
monty.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
mockall.workspace = true
